--- a/projects/todo list/index.html
+++ b/projects/todo list/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todos List || Simple todos list implementation</title>
+    <title>Todos List — Simple todos list implementation</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
       rel="stylesheet"
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
     <link rel="stylesheet" href="assets/style.css" />
     <script src="./dist/index.js" defer></script>
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
   </head>
   <body>
     <main>
